src/scss/styles.scss
@import "reset";

/* vars */

:root{

  --unit: clamp(18px, 2.75vw, 24px);
  --maxWidth: 1140px;

  --condensed: 'oswald';
  --europa: 'europa';
  --cooper: 'cooper-black-std';
  --blacker: 'Conv_Blacker-Pro-Display-Regular';

  --white: white;
  --black: black;

  --grey1: #EFEDED;
  --grey2: #A7A7A7;
  --grey3: #707070;
  --grey4: #343434;

  --green1: #80EBCE;
  --green2: #76EBCF;
  --green3: #36D0A6;

  --blue1: #2A96D4;
  --blue2: #004B83;
  --blue3: #1A4B7F;

  --purple1: #D5B6FF;
  --purple2: #C581D6;
  --purple3: #AA5ABE;
  --purple4: #615CF0;

  --pink1: #FE2E6E;

  --yellow1: #FFDA4F;

}

/* typo */

@font-face {
	font-family: 'Conv_Blacker-Pro-Display-Regular';
	src: url('assets/fonts/Blacker-Pro-Display-Regular.eot');
	src: local('☺'), url('assets/fonts/Blacker-Pro-Display-Regular.woff') format('woff'), url('fonts/Blacker-Pro-Display-Regular.ttf') format('truetype'), url('fonts/Blacker-Pro-Display-Regular.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
html{
  font-size: var(--unit);
}
body{
  line-height: 1.25;
  font-family: var(--europa);
  color: var(--blue3);
}
h1{
  font-size: 1.833rem;
  font-family: var(--blacker);
  line-height: 1;
  margin-bottom: .5em;
  span{
    display: block;
  }
  @media (max-width: 800px){
    margin: 2rem auto !important;
  }
}
h2, .h2{
  font-size: 1.35rem;
  margin-bottom: .5em;
}
h3{
  font-size: 1.2rem;
  margin-bottom: .5em;
}
h4{
  font-size: 1.1rem;
}

p:not(:last-child),
ul:not(:last-child){
  margin-bottom: 1em;
}
li{
  list-style-position: inside;
}
strong, .strong{
  font-weight: 700;
  color: var(--purple3);
}
.just-strong{
  @extend .strong;
  font-size: 1rem;
  margin-bottom: 0;
}
a{
  color: var(--purple4);
  transition: all .3s;
  &:hover{
    color: var(--blue3);
  }
}
.l-spaced{
  letter-spacing: .04em;
}
.uppercase{
  text-transform: uppercase;
}
/* Layout */

body{
  min-width: 340px;
}

body > *{
  padding: 0 0.75rem;
  @media(min-width: 400px){
    padding: 0 1.25rem;
  }
  &:is(header,main,section,aside),
  &:is(footer) nav{
    margin-right: auto;
    margin-left: auto;
  }
}
section > h2,
article{
  padding: 0 1.25rem;
  max-width: var(--maxWidth);
  @media(min-width: 1024px){
    margin-left: auto;
    margin-right: auto;
  }
}
article{
  margin-bottom: 3rem;
}


/* Margin and padding */

:root{
  --unitMarge: calc(var(--unit) / 3);
}
@media (min-width: 640px){
  :root{
    --unitMarge: calc(var(--unit) / 2);
  }
}
@media (min-width: 960px){
  :root{
    --unitMarge: var(--unit);
  }
}

$unit: var(--unitMarge);

@for $i from 0 through 4{
  .m-#{$i}{ margin: calc(#{$unit} * #{$i}); }
  .mt-#{$i}{ margin-top: calc(#{$unit} * #{$i}); }
  .ml-#{$i}{ margin-left: calc(#{$unit} * #{$i}); }
  .mb-#{$i}{ margin-bottom: calc(#{$unit} * #{$i}); }
  .mr-#{$i}{ margin-right: calc(#{$unit} * #{$i}); }
  .p-#{$i}{ padding: calc(#{$unit} * #{$i}); }
  .pt-#{$i}{ padding-top: calc(#{$unit} * #{$i}); }
  .pl-#{$i}{ padding-left: calc(#{$unit} * #{$i}); }
  .pb-#{$i}{ padding-bottom: calc(#{$unit} * #{$i}); }
  .pr-#{$i}{ padding-right: calc(#{$unit} * #{$i}); }
}

/* Font colors */

.white{
  color: var(--white);
  *{
    color: var(--white);
  }
}
.blue3{
  color: var(--blue3);
  *{
    color: var(--blue3);
  }
}
.purple2{
  color: var(--purple2);
  *{
    color: var(--purple2);
  }
}

.inverted{
  background-color: var(--white);
  color: var(--bgColor, var(--white));
  font-family: var(--condensed);
  display: inline-block;
  text-transform: uppercase;
  font-size: 1rem;
  @media(min-width: 960px){

    font-size: .9rem;
  }
  padding: .25rem .75rem;
  &.green{
    background-color: var(--green3);
  }

}
.under{
  position: relative;
  span{
    position: relative;
    z-index: 1;
    @media(min-width: 420px){
      white-space: nowrap;
    }
    @media(max-width: 419px){
      text-decoration: underline;
      text-decoration-color: var(--underColor, var(--green1));
    }
  }
  @media(min-width: 420px){

    &::after{
      content: '';
      position: absolute;
      display: block;
      top: .75em;
      left: 0;
      z-index: 0;
      height: .55em;
      width: 100%;
      background-color: var(--underColor, var(--green1));
    }
  }
}

/* Micro framework */

.europa{
  font-family: var(--europa);
}
.cooper{
  font-family: var(--cooper);
}
.blacker{
  font-family: var(--blacker);
}
.condensed{
  font-family: var(--condensed);
  text-transform: uppercase;
}
.block{
  display: block;
}
.bigger-x250{
  font-size: 175%;
  @media(min-width: 600px){
    font-size: 250%;
  }
  @media(max-width: 400px){
    font-size: 150%;
  }
}
.bigger-x200{
  font-size: 150%;
  @media(min-width: 600px){
    font-size: 200%;
  }
}
.bigger-x150{
  font-size: 125%;
  @media(min-width: 600px){
    font-size: 150%;
  }
}
.bigger-x125{
  font-size: 112.5%;
  @media(min-width: 600px){
    font-size: 125%;
  }
}

@media(min-width: 960px){
  .offset{
    margin-left: 25%;
  }
  .offset-10{
    margin-left: 10%;
  }
}
.green-star{
  background: url('assets/bg/green-star.svg') no-repeat;
  background-size: contain;
  padding: 2rem 0 2rem 2rem;
  transform: translateX(-2rem);
}
.purple-star{
  background: url('assets/bg/purple-star.svg') no-repeat;
  background-size: contain;
  padding: 2rem 0 2rem 2rem;
  transform: translateX(-2rem);
}
.yellow-star{
  background: url('assets/bg/yellow-star.svg') no-repeat;
  background-size: contain;
  padding: 1rem 0 1rem 2rem;
  transform: translateX(-2rem);
  margin-bottom: 0;
}
.shadow{
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
}
.green-border{
  border: 2px solid var(--green1);
}

/* Assets generics */

.video{
  position: relative;
  iframe{
    position: absolute;
    top:0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
  }
}
/* ... */

